--- a/style.css
+++ b/style.css
@@ -1,20 +1,28 @@
-/* Tag selector to select the 'body' element */
+body
 body {
-  /* Your code here! */
+  padding: auto;
+  display: flexbox;
+  width: 50px;
 }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
+body .div {
 div {
-  /* Your code here! */
+  width: 700px;
+margin: auto;
+font-family: "Helvetica Neue";
+background-color: white;
+padding: 30 px;
+}
 }
 
-/* ID selector to select the element with id 'main-header' */
+div .h1 .id {
 #main-header {
-  /* Your code here! */
+  font-size: 22px;
   color: red;
 }
-
-/* Class selector to select elements containing the class 'perspective-questions' */
+}
+div .ul {
 .perspective-questions {
-  /* Your code here! */
+  font-style: italic;
+}
 }
